fixes Reach a Counselor button visibility

--- a/src/theme/css/frontend/rc/_floating-crisis-btn.scss
+++ b/src/theme/css/frontend/rc/_floating-crisis-btn.scss
@@ -20,8 +20,4 @@
 	  @apply text-px20 leading-px20 tracking-px05;
 	}
   }
-
-  body.is-rc & {
-	display: none;
-  }
 }
